--- a/.gitignore
+++ b/.gitignore
@@ -1,60 +1,15 @@
- HEAD
- HEAD
-# Compiled class file
-*.class
+# IntelliJ IDEA
+.idea/
 
-# Log file
-*.log
+# Build output
+target/
+out/
 
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
+# Java dependencies (nếu dùng Maven/Gradle)
 *.jar
 *.war
-*.nar
 *.ear
-*.zip
-*.tar.gz
-*.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
-=======
-### IntelliJ IDEA ###
-out/
-!**/src/main/**/out/
-!**/src/test/**/out/
-
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-
-### VS Code ###
-.vscode/
-
-### Mac OS ###
+# OS-specific files
 .DS_Store
-1af7a54 (Initial commit)
-git add .gitignore
-git rebase --continue
-4118fa1 (Initial commit)
+thumbs.db
